Refactor. ImageType 목록조회 인덱스 페이징 적용으로 인한 성능 개선
1페이지 기준 1초 -> 0.05초
150000페이지 기준 17초 -> 2초